/**
 * Defined in assignment.
 */

public interface WeatherRecord {
    /**
     * Sets the maximum temperature
     * @param maxTemperature the new maximum temperature
     */
    public void setMaxTemperature(double maxTemperature);

    /**
     * Sets the minimum temperature
     * @param minTemperature the new minimum temperature
     */
    public void setMinTemperature(double minTemperature);
}